rocket_codegen/tests/ui-fail-nightly/typed-uris-bad-params.stderr
error: expected identifier, found keyword `_`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:65:18
   |
65 |     uri!(ignored(_ = 10));
   |                  ^

error: route expects 1 parameter but 2 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:71:18
   |
71 |     uri!(ignored(10, "10"));
   |                  ^^^^^^^^
   |
   = note: route `ignored` has uri "/<_>"

error: expected unnamed arguments due to ignored parameters
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:69:18
   |
69 |     uri!(ignored(num = 10));
   |                  ^^^^^^^^
   |
   = note: uri for route `ignored` ignores 1 path parameters: "/<_>"

error: route expects 1 parameter but 2 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:67:18
   |
67 |     uri!(ignored(10, 20));
   |                  ^^^^^^
   |
   = note: route `ignored` has uri "/<_>"

error: path parameters cannot be ignored
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:63:18
   |
63 |     uri!(ignored(_));
   |                  ^

error: path parameters cannot be ignored
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:61:36
   |
61 |     uri!(optionals(id = 10, name = _));
   |                                    ^

error: path parameters cannot be ignored
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:59:25
   |
59 |     uri!(optionals(id = _, name = "bob".into()));
   |                         ^

error: invalid parameters for `has_two` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:57:18
   |
57 |     uri!(has_two(id = 100, cookies = "hi"));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32, name: String
   = help: missing parameter: `name`
help: unknown parameter: `cookies`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:57:28
   |
57 |     uri!(has_two(id = 100, cookies = "hi"));
   |                            ^^^^^^^

error: invalid parameters for `has_two` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:55:18
   |
55 |     uri!(has_two(cookies = "hi", id = 100, id = 10, id = 10));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32, name: String
   = help: missing parameter: `name`
help: unknown parameter: `cookies`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:55:18
   |
55 |     uri!(has_two(cookies = "hi", id = 100, id = 10, id = 10));
   |                  ^^^^^^^
help: duplicate parameter: `id`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:55:44
   |
55 |     uri!(has_two(cookies = "hi", id = 100, id = 10, id = 10));
   |                                            ^^       ^^

error: invalid parameters for `has_two` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:53:18
   |
53 |     uri!(has_two(name = "hi"));
   |                  ^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32, name: String
   = help: missing parameter: `id`

error: invalid parameters for `has_two` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:51:18
   |
51 |     uri!(has_two(id = 100, id = 100, ));
   |                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32, name: String
   = help: missing parameter: `name`
help: duplicate parameter: `id`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:51:28
   |
51 |     uri!(has_two(id = 100, id = 100, ));
   |                            ^^

error: invalid parameters for `has_one_guarded` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:49:26
   |
49 |     uri!(has_one_guarded(id = 100, cookies = "hi"));
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `cookies`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:49:36
   |
49 |     uri!(has_one_guarded(id = 100, cookies = "hi"));
   |                                    ^^^^^^^

error: invalid parameters for `has_one_guarded` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:47:26
   |
47 |     uri!(has_one_guarded(cookies = "hi", id = 100));
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `cookies`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:47:26
   |
47 |     uri!(has_one_guarded(cookies = "hi", id = 100));
   |                          ^^^^^^^

error: invalid parameters for `has_one` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:45:18
   |
45 |     uri!(has_one(name = "hi"));
   |                  ^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
   = help: missing parameter: `id`
help: unknown parameter: `name`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:45:18
   |
45 |     uri!(has_one(name = "hi"));
   |                  ^^^^

error: invalid parameters for `has_one` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:43:18
   |
43 |     uri!(has_one(id = 100, id = 100, ));
   |                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: duplicate parameter: `id`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:43:28
   |
43 |     uri!(has_one(id = 100, id = 100, ));
   |                            ^^

error: invalid parameters for `has_one` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:41:18
   |
41 |     uri!(has_one(id = 100, id = 100));
   |                  ^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: duplicate parameter: `id`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:41:28
   |
41 |     uri!(has_one(id = 100, id = 100));
   |                            ^^

error: invalid parameters for `has_one` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:39:18
   |
39 |     uri!(has_one(name = 100, age = 50, id = 100, id = 50));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameters: `name`, `age`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:39:18
   |
39 |     uri!(has_one(name = 100, age = 50, id = 100, id = 50));
   |                  ^^^^        ^^^
help: duplicate parameter: `id`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:39:50
   |
39 |     uri!(has_one(name = 100, age = 50, id = 100, id = 50));
   |                                                  ^^

error: invalid parameters for `has_one` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:37:18
   |
37 |     uri!(has_one(name = 100, age = 50, id = 100));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameters: `name`, `age`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:37:18
   |
37 |     uri!(has_one(name = 100, age = 50, id = 100));
   |                  ^^^^        ^^^

error: invalid parameters for `has_one` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:35:18
   |
35 |     uri!(has_one(name = 100, id = 100));
   |                  ^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `name`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:35:18
   |
35 |     uri!(has_one(name = 100, id = 100));
   |                  ^^^^

error: invalid parameters for `has_one` route uri
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:33:18
   |
33 |     uri!(has_one(id = 100, name = "hi"));
   |                  ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `name`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:33:28
   |
33 |     uri!(has_one(id = 100, name = "hi"));
   |                            ^^^^

error: route expects 2 parameters but 1 was supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:31:18
   |
31 |     uri!(has_two(10));
   |                  ^^
   |
   = note: route `has_two` has uri "/<id>?<name>"

error: route expects 2 parameters but 3 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:30:18
   |
30 |     uri!(has_two(10, "hi", "there"));
   |                  ^^^^^^^^^^^^^^^^^
   |
   = note: route `has_two` has uri "/<id>?<name>"

error: route expects 1 parameter but 2 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:28:26
   |
28 |     uri!(has_one_guarded("hi", 100));
   |                          ^^^^^^^^^
   |
   = note: route `has_one_guarded` has uri "/<id>"

error: route expects 1 parameter but 2 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:27:18
   |
27 |     uri!(has_one("Hello", 23, ));
   |                  ^^^^^^^^^^^^
   |
   = note: route `has_one` has uri "/<id>"

error: route expects 1 parameter but 2 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:26:18
   |
26 |     uri!(has_one(1, 23));
   |                  ^^^^^
   |
   = note: route `has_one` has uri "/<id>"

error: route expects 1 parameter but 0 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:24:10
   |
24 |     uri!(has_one());
   |          ^^^^^^^
   |
   = note: route `has_one` has uri "/<id>"

error: route expects 1 parameter but 0 were supplied
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:23:10
   |
23 |     uri!(has_one);
   |          ^^^^^^^
   |
   = note: route `has_one` has uri "/<id>"

error[E0271]: type mismatch resolving `<String as FromParam<'_>>::Error == &str`
  --> tests/ui-fail-nightly/typed-uris-bad-params.rs:17:37
   |
17 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                                     ^^^^^^^^^^^^^^^^^^^^ expected `Empty`, found `&str`
